--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+winit = { version = "0.29", features = ["rwh_06"] }
