--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ash = { version = "0.38.0", features = ["linked"] }
+ash-window = "0.13.0"
+image = "0.25.1"
 winit = { version = "0.29", features = ["rwh_06"] }
