--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -14,6 +14,7 @@ name = "renderer"
 [dependencies]
 ash = { version = "0.38.0", features = ["linked"] }
 ash-window = "0.13.0"
+clap = { version = "4.5.4", features = ["derive"] }
 glm = "0.2.3"
 image = "0.25.1"
 regex = "1.10.4"
