--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -14,8 +14,10 @@ name = "renderer"
 [dependencies]
 ash = { version = "0.38.0", features = ["linked"] }
 ash-window = "0.13.0"
+bincode = "1.3.3"
 clap = { version = "4.5.4", features = ["derive"] }
 glm = "0.2.3"
 image = "0.25.1"
 regex = "1.10.4"
+serde = { version = "1.0.197", features = ["derive"] }
 winit = { version = "0.29", features = ["rwh_06"] }
