--- a/asset/Cargo.toml
+++ b/asset/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "spikes"
+name = "asset"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.6", features = ["derive"] }
 glob = "0.3.1"
-regex = "1.10.4"
-
-[workspace]
+xml-rs = "0.8.20"
