--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -21,3 +21,4 @@ image = "0.25.1"
 regex = "1.10.4"
 serde = { version = "1.0.197", features = ["derive"] }
 winit = { version = "0.29", features = ["rwh_06"] }
+asset = { path = "../asset" }
